...
              steamId={steamId}
              avatarUrl={avatarUrl}
              isHighlighted={true}
            />
            <VStack className="flex-1">
              <Text size="xs" className="font-medium text-typography-400">
                Active Friend
              </Text>
              <Text
                size="sm"
                className="font-bold uppercase text-primary-700"
                numberOfLines={1}
              >
...

          <Button
            size="xs"
            variant="outline"
            action="primary"
            onPress={onChangeFriend}
            testID="search-another-friend-btn"
          >
            <Ionicons
              name="search-outline"
              size={14}
              color={toHex(brand.primary['500'])}
              style={{ marginRight: 4 }}
...
