...
  tabBar: (props) => <AdaptiveTabBar {...props} />,
  screens: {
    GameListTab: {
      screen: GameListStack,
      options: {
        headerShown: false,
        title: 'Games',
        tabBarIcon: ({ color, size, focused }) => (
          <Ionicons name="game-controller" size={size} color={color} />
        ),
      },
    },
    ProfileTab: {
...
        tabBarIcon: ({ color, size, focused }) => (
          <Ionicons name="person" size={size} color={color} />
        ),
        headerShown: false,
      },
    },
    SocialTab: {
      screen: SocialStack,
      options: {
        title: 'Social',
        tabBarIcon: ({ color, size, focused }) => (
          <Ionicons name="people" size={size} color={color} />
        ),
...
