...
            onCommonGamePress={handleCommonGamePress}
            onTopGamePress={handleTopGamePress}
          />
        )}
      </ScrollablePage>

      <BackButton onPress={handleBack} testID="recommendations-back-btn" />
    </Box>
  );
};

export default FriendRecommendationsView;

